--- a/collective/confirmableforms/locales/fr/LC_MESSAGES/collective.confirmableforms.po
+++ b/collective/confirmableforms/locales/fr/LC_MESSAGES/collective.confirmableforms.po
@@ -1,8 +1,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2012-09-07 15:07+0000\n"
-"PO-Revision-Date: 2012-09-07 17:07+0200\n"
+"POT-Creation-Date: 2012-09-07 15:32+0000\n"
+"PO-Revision-Date: 2012-09-07 17:34+0200\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -14,20 +14,16 @@ msgstr ""
 "Preferred-Encodings: utf-8 latin1\n"
 "Domain: DOMAIN\n"
 
+#: ./profiles/default/types/ConfirmedFormMailerAdapter.xml
+msgid "A form action adapter that will send a confirmation email, then will e-mail form input."
+msgstr "Un adaptateur de formulaire. Il va envoyer un email de confirmation puis un email contenant les données soumises dans le formulaire"
+
 #: ./content/confirmedFormMailerAdapter.py:25
 msgid "Confirmation email"
 msgstr "Email de confirmation"
 
-#. Default: "A form action adapter that will send a confirmation email, then will e-mail form input."
 #: ./profiles/default/types/ConfirmedFormMailerAdapter.xml
-msgid "label_confirmedmaileradapter_desc"
-msgstr ""
-"Un adaptateur de formulaire. Il va envoyer un email de confirmation\n"
-"puis un email contenant les données soumises dans le formulaire"
-
-#. Default: "Confirmed Mailer Adapter"
-#: ./profiles/default/types/ConfirmedFormMailerAdapter.xml
-msgid "label_confirmedmaileradapter_title"
+msgid "Confirmed Mailer Adapter"
 msgstr "Adaptateur email avec confirmation"
 
 #. Default: "If the receiver can read HTML emails, this will be displayed instead of the simple text version specified above. Use the same substitution for the link and tal language is also enabled."
