--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -4,7 +4,8 @@ Changelog
 1.3 (unreleased)
 ----------------
 
-- Nothing changed yet.
+- Translate the Confirmation schemata tab.
+  [maurits]
 
 
 1.2.1 (2012-09-07)
