--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -4,7 +4,8 @@ Changelog
 1.3 (unreleased)
 ----------------
 
-- Nothing changed yet.
+- Time during which the form can be confirmed is now a setting in the
+  confirmer. [vincent]
 
 
 1.2.1 (2012-09-07)
