--- a/collective/confirmableforms/locales/fr/LC_MESSAGES/collective.confirmableforms.po
+++ b/collective/confirmableforms/locales/fr/LC_MESSAGES/collective.confirmableforms.po
@@ -1,18 +1,18 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: collective.confirmableforms 1.0\n"
 "POT-Creation-Date: 2012-09-14 12:34+0000\n"
 "PO-Revision-Date: 2012-09-11 18:16+0200\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"Last-Translator: Vincent Pretre <v.pretre@zestsoftware.nl>\n"
+"Language-Team: Zest Software <info@zestsoftware.nl>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0\n"
-"Language-Code: en\n"
-"Language-Name: English\n"
+"Language-Code: fr\n"
+"Language-Name: French\n"
 "Preferred-Encodings: utf-8 latin1\n"
-"Domain: DOMAIN\n"
+"Domain: collective.confirmableforms\n"
 
 #: ./profiles/default/types/ConfirmedFormMailerAdapter.xml
 msgid "A form action adapter that will send a confirmation email, then will e-mail form input."
