--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -6,7 +6,7 @@ Changelog
 
 - Add a field to select a different thank-you page to show when the
   form has been confirmed.  Fall back to the standard thank-you page
-  of the form.
+  of the form or the fg_result_view page.
   [maurits]
 
 - When there is no plain text or no html text, do not send that part.
