--- a/collective/confirmableforms/locales/nl/LC_MESSAGES/collective.confirmableforms.po
+++ b/collective/confirmableforms/locales/nl/LC_MESSAGES/collective.confirmableforms.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: collective.confirmableforms 1.0\n"
 "POT-Creation-Date: 2016-11-18 16:10+0000\n"
-"PO-Revision-Date: 2012-09-11 18:17+0200\n"
+"PO-Revision-Date: 2016-11-18 17:12+0100\n"
 "Last-Translator: Maurits van Rees <m.van.rees@zestsoftware.nl>\n"
 "Language-Team: Zest Software <info@zestsoftware.nl>\n"
 "MIME-Version: 1.0\n"
@@ -24,7 +24,7 @@ msgstr "E-mail actie met bevestiging"
 
 #: ./configure.zcml:18
 msgid "Installs the collective.confirmableforms package"
-msgstr ""
+msgstr "Installeert collective.confirmableforms"
 
 #: ./content/confirmedFormMailerAdapter.py:105
 msgid "You must specify either a plain text or html mail (or both)."
@@ -32,7 +32,7 @@ msgstr "U moet een platte tekst of html versie opgeven (of beide)."
 
 #: ./configure.zcml:18
 msgid "collective.confirmableforms"
-msgstr ""
+msgstr "collective.confirmableforms"
 
 #. Default: "\n                Pick a page contained in the form that you wish to show\n                when the form submission has been confirmed.\n                (If none are available, add one.)\n                Choose none to display the standard thanks page of the form.\n            "
 #: ./content/confirmedFormMailerAdapter.py:67
