Removed empty locales/manual.pot

--- a/collective/confirmableforms/locales/collective.confirmableforms.pot
+++ b/collective/confirmableforms/locales/collective.confirmableforms.pot
@@ -1,7 +1,10 @@
+# --- PLEASE EDIT THE LINES BELOW CORRECTLY ---
+# SOME DESCRIPTIVE TITLE.
+# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2016-11-18 16:25+0000\n"
+"POT-Creation-Date: 2016-11-18 18:00+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI +ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -12,7 +15,7 @@ msgstr ""
 "Language-Code: en\n"
 "Language-Name: English\n"
 "Preferred-Encodings: utf-8 latin1\n"
-"Domain: DOMAIN\n"
+"Domain: collective.confirmableforms\n"
 
 #: ./profiles/default/types/ConfirmedFormMailerAdapter.xml
 msgid "A form action adapter that will send a confirmation email, then will e-mail form input."
